# test_app

./: README.md  docker-compose.yml
backend/: README.md  main.py  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 94f461b9c8dd_add_user.py  9a7e89bca310_add_spending.py
backend/core/: __init__.py  auth.py  database.py  settings.py  utils.py
backend/core/models/: base.py  spending.py  user.py
backend/hadnlers/: __init__.py
backend/hadnlers/spending/: schemes.py  utils.py  views.py
backend/hadnlers/user/: schemes.py  utils.py  views.py
telegrambot/: Dockerfile  README.md  main.py  pyproject.toml  run.sh  settings.py
telegrambot/keyboards/: __init__.py  reply_keyboards.py
telegrambot/utils/: __init__.py  auth.py  base64.py  spendings.py
telegrambot/views/: __init__.py
telegrambot/views/base/: __init__.py  handlers.py
telegrambot/views/spendings/: __init__.py  handlers.py  states.py  utils.py
