[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.2",
    "uvicorn>=0.34.0",
]
